--- a/TestMassTransit.Produser.Console/TestMassTransit.Produser.Console.csproj
+++ b/TestMassTransit.Produser.Console/TestMassTransit.Produser.Console.csproj
@@ -8,7 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\TestMassTransit.Contracts\TestMassTransit.Contracts.csproj" />
+        <ProjectReference Include="..\TestMassTransit.Contracts\TestMassTransit.Contracts.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
